fix o-nas z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12289,7 +12289,7 @@ span.material-icons.lightMode {
 	    margin: 0;
 	    padding: 0;
 	    right: 0;
-	    z-index: 999;
+	    z-index: 99;
 	}
 	.with-labels {
 		display: block;
@@ -12510,8 +12510,8 @@ span.material-icons.lightMode {
     width: 100%;
     height: 65px;
     bottom: 0;
-    background: #2a2a2a;
-    z-index: 999;
+    background: transparent;
+    z-index: 100;
     top: 170px;
     padding-right: 12px;
     padding-top: 17px;
